# production_cost_model

./: .gitignore  README.md  embedded_cem_data.py  embedded_traces.py  extract_cem_traces.py  extract_gee_demand.py  extract_traces.py  pyproject.toml  pypsa_cem.py  pypsa_dispatch.py
__marimo__/session/: production_cost_model.py.json  pypsa_cem.py.json  pypsa_dispatch.py.json
